[package]
name = "walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
flatgeobuf = "3.24"
geo-types = "0.7"
geozero = "0.9"
itertools = "0.10"
percent-encoding = "2.2"
png = "0.17.2"
polyline = "0.9.0"
rasterize = { version = "0.3", default-features = false, features = ["png"] }
rayon = "1.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
zip = "0.6"
